--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     },
     "devDependencies": {
         "axios": "^1.6.4",
-        "laravel-vite-plugin": "^1.0.0",
+        "bootstrap": "^5.3.2",
+        "laravel-vite-plugin": "^1.0.1",
+        "sass": "^1.70.0",
         "vite": "^5.0.0"
     }
 }
