--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-BASE_URL=
+BASE_URL=http://localhost:8001
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
