--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "devDependencies": {
         "axios": "^1.6.4",
         "bootstrap": "^5.3.2",
+        "cross-env": "^7.0.3",
+        "jquery": "^3.7.1",
         "laravel-vite-plugin": "^1.0.1",
+        "lodash": "^4.17.21",
+        "popper.js": "^1.16.1",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.70.0",
+        "sass-loader": "^14.0.0",
         "vite": "^5.0.0"
     }
 }
